...
    static let kSTRING_IMAGETYPE_32x9 = "_32x9"
    static let kSTRING_IMAGETYPE_16x9 = "_16x9"
    static let kSTRING_IMAGETYPE_4x3 = "_4x3"
    static let kSTRING_IMAGETYPE_3x4 = "_3x4"
    static let kSTRING_IMAGETYPE_1x1 = "_1x1"
    static let kNetWorkStatus = "networkStatus"
    static let kStrCancel = "Cancel"
    static let kStrRetry = "Retry"
    static let kVideoContentType = "video"
    static let kVideosContentType = "videos"
    static let kShowContentType = "series"
    static let kShowsContentType = "shows"
    static let kArticleContentType = "article"
...
    static let kStrOk = "OK"
    #endif
    static let kStrSign = "Sign In"
    static let kStrSubscription = "Subscribe Now"
    static let kInternetConnection = "Internet Connection"
    static let kInternetConntectionRefresh = "There is an error loading \(Bundle.main.infoDictionary?["CFBundleDisplayName"] ?? ""). Please check your Internet Connection and try again later"
    static let kNoResponseErrorTitle = "No Response Received"
    static let kManageSubscription = "Manage Subscription"
    static let kManageSubscriptionString = "This is %@ %@ subscription. Management is possible with the device used for purchase."
    static let kAutoPlay = "AutoPlay Value"
    static let kCellularDownload = "Cellular Download"
    static let kPasswordValidationError = "Password should contain minimum 5 & maximum 50 characters"
    static let kCoutryDialCodeError = "Please select your mobile dial country code"
...
