...
                    ii = ii+1
                    //                    }
                    //                    else
                    //                    {
                    //                        let moreViewController: MoreViewController = MoreViewController()
                    //                        moreViewController.view.frame = CGRect(x: 0, y: 0, width: UIScreen.main.bounds.size.width, height: UIScreen.main.bounds.size.height)
                    //                        moreViewController.tabBarItem = UITabBarItem(title: "Menu", image: UIImage(named: menuImagesArray[0] as String), selectedImage: UIImage(named: ""))
                    //                        moreViewController.tabBarItem.tag = 4
                    //
                    //                        let navigationController: UINavigationController = UINavigationController.init(rootViewController: moreViewController)
                    //                        viewControllersArray.insert(navigationController, at: 0)
                    //                        break
                    //                    }
...
